modules/gdscript/tests/scripts/analyzer/errors/shadowing.gd
class A:
	enum { V }

class B extends A:
	enum { V }

class Vector2: pass
enum Vector2i { A, B }
const Vector3 = 0
var Vector3i

func test():
	pass
